8153756: jdk.vm.ci should not depend on sun.misc ( jdk.unsupported module )
Reviewed-by: twisti